--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.android.support:appcompat-v7:29.*'
     implementation 'com.github.bumptech.glide:glide:4.4.0'
+    implementation 'org.jsoup:jsoup:1.11.3'
+
 }
