--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+    }
 }
 
 dependencies {
@@ -31,4 +41,14 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.android.support:appcompat-v7:29.*'
     implementation 'com.github.bumptech.glide:glide:4.4.0'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.10.0.pr3'
+    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+    implementation 'org.apache.commons:com.springsource.org.apache.commons.codec:1.6.0'
+    implementation 'org.springframework.android:spring-android-rest-template:2.0.0.M3'
 }
+
+configurations {
+    implementation.exclude group: "junit", module: "junit"
+}
+
+
